2005-09-29  John W. Eaton  <jwe@octave.org>

	* syscalls.cc (mk_stat_map): Store mode too.
	(FS_ISREG, FS_ISDIR, FS_ISCHR, FS_ISBLK, FS_ISFIFO, FS_ISLNK,
	FS_ISSOCK): New functions.
	(Fstat): Fix docstring.

2005-09-28  John W. Eaton  <jwe@octave.org>

	* oct-stream.cc (printf_value_cache::double_value): Force
	character strings to be converted to ASCII equivalents.

	* data.cc (Fcomplex): New function.

	* ov-type-conv.h (OCTAVE_TYPE_CONV_BODY3): Return arg unchanged if
	class name is same as name of conversion.

	* dirfns.cc (Frmdir, Fmkdir): For compatibility, return true for
	success and false for failure.  Return third value, msgid.
	(Frmdir): Handle second arg for recursive behavior.

2005-09-23  John W. Eaton  <jwe@octave.org>

	* parse.y (load_fcn_from_file): Don't look in path if file is
	absolute and has .oct or .m extension.

	* utils.cc (Ferrno_list): New function.

	* oct-errno.h, oct-errno.cc.in: New files.
	* Makefile.in: Add them to the appropriate lists.
	(oct-errno.cc): New rule.
	($(OPT_HANDLERS)): Use $(PERL) instead of just perl.

	* utils.cc: Include oct-errno.h.
	(Ferrno): Rename from FERRNO.  Allow errno to be set.  Allow
	lookups of errno codes by name and access to structure containing
	all errno names and codes.

2005-09-19  John W. Eaton  <jwe@octave.org>

	* pt-bp.cc (tree_breakpoint::visit_index_expression):
	Avoid dereferencing invalid pointer.

2005-09-19  David Bateman  <dbateman@free.fr>

	* Makefile.in (OCT_LINK_DEPS): Include UFsparse libraries.

	* DLD_FUNCTIONS/__glpk__.cc (F__glpk__): Replace isinf with
	xisinf. Allow sparse matrices as second argument.

	* syscalls.cc: Typos.
	* sysdep.cc: Typos.

2005-09-16  John W. Eaton  <jwe@octave.org>

	* syscalls.cc (Fwaitpid): Doc fix.  Expect WNOHANG, WUNTRACED,
	WCONTINUED as args instad of int values.
	Return values are now [pid, status, msg] instad of [pid, msg].
	(WIFEXITED, WEXITSTATUS, WIFSIGNALED, WTERMSIG, WCOREDUMP,
	WIFSTOPPED, WSTOPSIG, WIFCONTINUED): New functions.